# opendht

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  AGENTS.md  BUILD.md  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  Makefile.am  README.md  autogen.sh  configure.ac  dependencies.txt  dhtcpp.pc.in  meson.build  meson.options  meson_options.txt  opendht-c.pc.in  opendht.pc.in  opendht.sln  opendht.vcxproj  opendhtConfig.cmake.in  vcpkg-configuration.json  vcpkg.json
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ccpp.yml  clang-analyzer.yml  codeql-analysis.yml  codeql.yml  python-publish.yml  python-wheels.yml  release-package.yml  release-python.yml  windows-build.yml
MSVC/: .gitignore  argon.vcxproj  blake.vcxproj  build_vs2015_release_x64.bat  dhtchat.vcxproj  dhtnode.vcxproj  dhtscanner.vcxproj  fetch_deps.bat  opendht.sln  opendht.vcxproj  opendht.vcxproj.filters  opendht_deps.sln  project_get_dependencies.bat  unistd.h
MSVC/contrib/src/: fetch_and_patch.bat
MSVC/contrib/src/argon2/: argon2-uwp.patch  fetch_and_patch.bat
MSVC/contrib/src/gmp/: fetch_and_patch.bat  gmp-uwp.patch
MSVC/contrib/src/gnutls/: fetch_and_patch.bat  gnutls-no-egd.patch  gnutls-uwp.patch
MSVC/contrib/src/iconv/: fetch_and_patch.bat  libiconv-uwp.patch
MSVC/contrib/src/msgpack/: fetch_and_patch.bat  msgpack-uwp.patch
MSVC/contrib/src/nettle/: fetch_and_patch.bat  nettle-uwp.patch
MSVC/contrib/src/zlib/: fetch_and_patch.bat  zlib-uwp.patch
SMP/: .gitignore  get-deps.bat  opendht.sln  opendht.vcxproj
argon2/: Makefile.am
c/: Makefile.am  opendht.cpp  opendht_c.h
cmake/: CheckAtomic.cmake  FindCppunit.cmake  FindCrypto.cmake  FindJsoncpp.cmake  FindMsgpack.cmake  FindNL.cmake  FindOpenSSL.cmake  FindReadline.cmake  FindRestbed.cmake  FindRestinio.cmake  WindowsUtils.cmake
compat/msvc/: wingetopt.c
doc/: CMakeLists.txt  Doxyfile.in  Makefile.am  connectivity-loss-by-search-criteria.tex  dhtnode.1
docker/: Dockerfile  DockerfileAlpine  DockerfileAlpineEdge  DockerfileBionic  DockerfileDeps  DockerfileDepsAlpine  DockerfileDepsAlpineEdge  DockerfileDepsBionic  DockerfileDepsFocal  DockerfileDepsLlvm  DockerfileDepsProxy  DockerfileDhtnode  DockerfileFocal  DockerfileLlvm  DockerfileTravis  DockerfileTravisLlvm  DockerfileTravisProxy
docker/conan/restinio/: conanfile.py  conanfile.txt
include/: dht.h  opendht.h
include/dhtcpp/: crypto.h  dht.h  dhtrunner.h  securedht.h  serialize.h  value.h
include/opendht/: base64.h  callbacks.h  connectivity_stat.hpp  connstat.h  crypto.h  def.h  default_types.h  dht.h  dht_interface.h  dht_proxy_client.h  dht_proxy_server.h  dhtproxyserver.h  dhtrunner.h  http.h  infohash.h  log.h  log_enable.h  logger.h  net.h  network_engine.h  network_utils.h  node.h  node_cache.h  node_export.h  peerDiscovery.h  peer_discovery.h  proxy.h  rate_limiter.h  request.h  rng.h  routing_table.h  scheduler.h  securedht.h  serialize.h  sockaddr.h  thread_pool.h  udp_socket.h  utils.h  uv_utils.h  value.h
include/opendht/crypto/: secure_vector.h
include/opendht/indexation/: pht.h
m4/: ax_cxx_compile_stdcxx_11.m4
ports/shiftmedia-libgnutls/: portfile.cmake
python/: CMakeLists.txt  Makefile.am  README.md  opendht.pyx  opendht_cpp.pxd  pyproject.toml  setup.py  setup.py.in
python/opendht/: __init__.py  aio.py
python/tests/: opendht_tests.py
python/tools/: README.md  benchmark.py  cluster.py  dhtcluster.py  dhtnetwork.py  dummy_if.py  http_server.py  network_monitor.py  pingpong.py  scanner.py  virtual_network_builder.py
python/tools/dht/: network.py  tests.py  virtual_network_builder.py
rust/: .gitignore  Cargo.toml  README.md
rust/examples/: dhtnode.rs  dhtnode_async.rs
rust/src/: blob.rs  crypto.rs  dhtrunner.rs  ffi.rs  infohash.rs  lib.rs  pkid.rs  value.rs
src/: Makefile.am  base64.cpp  base64.h  callbacks.cpp  connectivity_stat.cpp  connstat.cpp  crypto.cpp  default_types.cpp  dht.cpp  dht_proxy_client.cpp  dht_proxy_server.cpp  dhtproxyserver.cpp  dhtrunner.cpp  getif_workaround_android.h  http.cpp  infohash.cpp  listener.h  log.cpp  log_enable.h  net.h  network_engine.cpp  network_utils.cpp  network_utils.h  node.cpp  node_cache.cpp  op_cache.cpp  op_cache.h  parsed_message.h  peerDiscovery.cpp  peer_discovery.cpp  request.h  rng.cpp  routing_table.cpp  search.h  securedht.cpp  storage.h  thread_pool.cpp  thread_pool.h  udp_socket.cpp  utils.cpp  (+2 more)
src/argon2/: Makefile.am
src/compat/: getif_workaround_android.h  getif_workaround_darwin.h  getif_workaround_win.h  os_cert.cpp  os_cert.h
src/compat/apple/: apple_utils.h  apple_utils.mm
src/compat/msvc/: unistd.h
src/compat/win32/: wingetopt.h
src/indexation/: pht.cpp
tests/: Makefile.am  compile_http.sh  cryptotester.cpp  cryptotester.h  dhtproxy_stress_tester.cpp  dhtproxy_stress_tester.h  dhtproxytester.cpp  dhtproxytester.h  dhtrunnertester.cpp  dhtrunnertester.h  httptester.cpp  httptester.h  infohashtester.cpp  infohashtester.h  opcachetester.cpp  peerDiscoverytester.cpp  peerDiscoverytester.h  peerdiscoverytester.cpp  peerdiscoverytester.h  storagetester.cpp  test_crypto.cpp  test_dhtproxy.cpp  test_dhtproxy.h  test_dhtproxy_client.cpp  test_dhtproxy_client.h  test_dhtproxy_stress.cpp  test_dhtproxy_stress.h  test_dhtrunner.cpp  test_dhtrunner.h  test_http.cpp  test_http.h  test_infohash.cpp  test_infohash.h  test_networkengine.cpp  test_networkengine.h  test_opcache.cpp  test_opcache.h  test_parsedmessage.cpp  test_parsedmessage.h  test_peerdiscovery.cpp  (+14 more)
tools/: CMakeLists.txt  Makefile.am  dhtchat.cpp  dhtcnode.c  dhtnode.cpp  dhtproxy_stats.py  dhtscanner.cpp  durl.cpp  perftest.cpp  proxy_benchmark.py  proxy_loadtester.py  proxy_node.html  tools_common.h
tools/python/: opendht.pyx  scanner.py  setup.py
tools/python/tests/: benchmark.py  dhtnetwork.py  dummy_if.py
tools/systemd/: dhtcluster.conf  dhtcluster.service.in  dhtnode.conf  dhtnode.service.in
